FSPA-135 #comment code refactoring

--- a/src/app/forms/load-form/load-form.component.html
+++ b/src/app/forms/load-form/load-form.component.html
@@ -61,7 +61,7 @@
             *ngIf='selectedCustomer'
             clearLabel='Leave Empty'
             class="bd-form-control"
-            labelText='Contacts'
+            labelText='Contact'
             defaultTitleText="Select Contact"
             formControlName="contactId"
             [items]="selectedCustomer.contacts"
