--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,6 +14,16 @@
         <template #dropdownItemTemplate let-item="item">
             {{item}}
         </template>
+
+        <bd-dropdown
+            [defaultLabelText]="'contact'"
+            [labelText]="'contact'"
+            [defaultTitleText]="'Select Contact'"
+            [dropdownHeaderTemplate]="dropdownHeaderTemplate"
+            [dropdownFooterTemplate]="dropdownFooterTemplate"
+            [dropdownItemTemplate]="dropdownItemTemplate"
+            [items]="items">
+        </bd-dropdown>
         </div>
         <swui-datatable
           class="material striped"
