--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -61,3 +61,6 @@ $large-font-size: 1.25rem;
 }
 /* default input height */
 $form-control-height: 50px;
+
+/* form navigation */
+$form-navigation-height: 91px;
