FSPA-152 create dropoff commodities selector

--- a/src/app/forms/commodities-forms/base-commodity-form/base-commodity-form.component.html
+++ b/src/app/forms/commodities-forms/base-commodity-form/base-commodity-form.component.html
@@ -6,6 +6,7 @@
   </div>
 </div>
 <commodity
+  class='commodity-item'
   *ngFor="let data of renderFormData; let i = index"
   [isRemoveButtonHidden]="renderFormData.length === 1"
   [viewMode]="viewMode"
