--- a/src/app/forms/commodities-forms/drop-off-commodity-form/drop-off-commodity-form.component.html
+++ b/src/app/forms/commodities-forms/drop-off-commodity-form/drop-off-commodity-form.component.html
@@ -1,6 +1,27 @@
+<template #dropdownItemTemplate let-item="item">
+  <commodity
+    [isRemoveButtonHidden]="'true'"
+    [viewMode]="viewMode"
+    [commodity]="item">
+  </commodity>
+</template>
 <base-commodity-form
   [viewMode]="viewMode"
   #commodityForm
   [formArray]="formArray"
   [items]="commodities">
 </base-commodity-form>
+<div>
+  <bd-add-button class="bd-form-control" (mousedown)="onShowPickups()"></bd-add-button>
+  <div>
+    <commodity
+      class='pickup-commodity-item'
+      *ngFor="let commodity of pickupCommodities; let i = index"
+      [isRemoveButtonHidden]="'true'"
+      [viewMode]="viewMode"
+      [disabled]="'true'"
+      (click)="pickupSelect(commodity)"
+      [commodity]="commodity">
+    </commodity>
+  </div>
+</div>
