--- a/src/app/forms/commodities-forms/drop-off-commodity-form/drop-off-commodity-form.component.scss
+++ b/src/app/forms/commodities-forms/drop-off-commodity-form/drop-off-commodity-form.component.scss
@@ -1,2 +1,11 @@
 @import '../../../../assets/styles/variables';
 @import '../../../../assets/styles/form-control';
+
+.pickup-commodity-item {
+  background-color: $white;
+
+  &:hover {
+    cursor: pointer;
+    background-color: $light-blue;
+  }
+}
