--- a/src/app/forms/commodities-forms/base-commodity-form/components/commodity/commodity.component.html
+++ b/src/app/forms/commodities-forms/base-commodity-form/components/commodity/commodity.component.html
@@ -1,6 +1,7 @@
 <div [formGroup]="commodityForm">
   <div class="c-row">
       <input class="c-col"
+        [ngClass]="{'disabled': disabled, 'c-col': 'true' }"
         *ngFor="let field of fields; let i = index"
         [attr.index]="i"
         [formControlName]="field.name"
