--- a/src/app/forms/commodities-forms/base-commodity-form/components/commodity/commodity.component.scss
+++ b/src/app/forms/commodities-forms/base-commodity-form/components/commodity/commodity.component.scss
@@ -1,6 +1,10 @@
 @import '../../../../../../assets/styles/variables';
 @import '../../../../../../assets/styles/form-control';
 
+:host {
+  display: block;
+}
+
 .c-row {
   display: flex;
 
@@ -11,6 +15,7 @@
     flex: 1;
     min-width: 0;
     border-color: $grey;
+    background-color: inherit;
     border-width: 0 1px 1px 0;
     outline: none;
     box-shadow: none;
@@ -18,6 +23,10 @@
     &:active,
     &:focus {
       border-bottom-color: $blue;
+    }
+
+    &:disabled {
+      border-color: $grey;
     }
 
     &:last-child {
