FSPA-151 fix items remove

--- a/src/app/forms/commodities-forms/base-commodity-form/base-commodity-form.component.html
+++ b/src/app/forms/commodities-forms/base-commodity-form/base-commodity-form.component.html
@@ -14,5 +14,5 @@
   [group]="data.group"
   (blur)="onBlur($event)"
   (focus)="onFocus($event)"
-  (remove)="onRemove(data)">
+  (remove)="removeItem(data)">
 </commodity>
