--- a/src/app/forms/load-form/load-form.component.html
+++ b/src/app/forms/load-form/load-form.component.html
@@ -14,7 +14,7 @@
   </template>
 <form [formGroup]="loadForm" class="edit">
   <div class="bd-form">
-    <navigation-anchor anchorId="customer"></navigation-anchor>
+    <navigation-anchor id="customer"></navigation-anchor>
     <bd-form-section labelText="Customer">
       <bd-validator [component]="loadForm.controls.customer" [errorDefs]="{required: 'Customer is required'}">
         <bd-typeahead
@@ -71,11 +71,11 @@
             valueField="name">
           </bd-dropdown>
         </bd-form-section>
-        <navigation-anchor anchorId="pickups"></navigation-anchor>
+        <navigation-anchor id="pickups"></navigation-anchor>
         <bd-form-section [labelText]="'PICKUPS'">
             <pick-up-commodity-form [group]="getCommoditiesFormGroup()" [commodities]="stops[0].commodities" [viewMode]="customerViewMode"></pick-up-commodity-form>
         </bd-form-section>
-        <navigation-anchor anchorId="requirements"></navigation-anchor>
+        <navigation-anchor id="requirements"></navigation-anchor>
         <bd-form-section [labelText]="'REQUIREMENTS'">
           <bd-form-switch class="bd-form-control" [labelText]="'Driver'" [enableButtonSwitch]="isEditMode" formControlName="driverRequirment" [items]="driverRequirmentsNames">
           </bd-form-switch>
