FSPA-149 refactoring navigation and multipane layout positioning

--- a/src/app/forms/load-form/load-form.component.scss
+++ b/src/app/forms/load-form/load-form.component.scss
@@ -43,5 +43,5 @@ form-navigation {
   position: absolute;
   z-index: 2;
   top: 0;
-  width: calc(100% - 34px); //adjust width by scroll bar width
+  width: 100%;
 }
