--- a/src/app/shared/components/form-navigation/form-navigation.component.scss
+++ b/src/app/shared/components/form-navigation/form-navigation.component.scss
@@ -46,12 +46,14 @@
   }
 }
 
-//sass-lint:disable-all
+//sass-lint:disable no-important
 .ps-active-x {
   &.ps-in-scrolling  {
-    .ps-scrollbar-x {
-      height: 5px !important;
-      bottom: -2px !important;
+    .ps-scrollbar-x-rail {
+      .ps-scrollbar-x {
+        height: 5px !important;
+        bottom: -2px !important;
+      } 
     }
   }
 
@@ -76,4 +78,4 @@
     }
   }
 }
-//sass-lint:enable-all
+//sass-lint:enable no-important
