--- a/src/app/shared/components/form-navigation/form-navigation.component.scss
+++ b/src/app/shared/components/form-navigation/form-navigation.component.scss
@@ -1,5 +1,7 @@
 @import '../../../../assets/styles/variables';
 
+$container-height: 43px;
+
 .form-navigation {
   padding: 10px 17px 0;
   background-color: $white;
@@ -12,7 +14,7 @@
   .container {
     position: relative;
     width: 100%;
-    height: 43px;
+    height: $container-height;
     padding: 0;
   }
 
