--- a/src/app/forms/load-form/load-form.component.html
+++ b/src/app/forms/load-form/load-form.component.html
@@ -66,7 +66,7 @@
             formControlName="contactId"
             [items]="selectedCustomer.contacts"
             keyField="id"
-            valueField="name">
+            valueField="firstName">
           </bd-dropdown>
         </bd-form-section>
         <bd-form-section [labelText]="'PICKUPS'">
