FSPA-152 implement store for commodity management

--- a/src/app/forms/commodities-forms/base-commodity-form/base-commodity-form.component.html
+++ b/src/app/forms/commodities-forms/base-commodity-form/base-commodity-form.component.html
@@ -14,5 +14,6 @@
   [group]="data.group"
   (blur)="onBlur($event)"
   (focus)="onFocus($event)"
+  (change)="onChange($event)"
   (remove)="removeItem(data)">
 </commodity>
