--- a/src/app/forms/commodities-forms/pick-up-commodity-form/pick-up-commodity-form.component.html
+++ b/src/app/forms/commodities-forms/pick-up-commodity-form/pick-up-commodity-form.component.html
@@ -2,6 +2,7 @@
   [viewMode]="viewMode"
   #commodityForm
   [formArray]="formArray"
+  (change)="onChange($event)"
   [items]="commodities">
 </base-commodity-form>
 <bd-add-button class="bd-form-control" (mousedown)="onAdd()"></bd-add-button>
