--- a/src/app/forms/commodities-forms/drop-off-commodity-form/drop-off-commodity-form.component.html
+++ b/src/app/forms/commodities-forms/drop-off-commodity-form/drop-off-commodity-form.component.html
@@ -9,14 +9,15 @@
   [viewMode]="viewMode"
   #commodityForm
   [formArray]="formArray"
+  (change)="onChange($event)"
   [items]="commodities">
 </base-commodity-form>
 <div>
   <bd-add-button class="bd-form-control" (mousedown)="onShowPickups()"></bd-add-button>
-  <div>
+  <div *ngIf="showPickups">
     <commodity
       class='pickup-commodity-item'
-      *ngFor="let commodity of pickupCommodities; let i = index"
+      *ngFor="let commodity of availablePickups; let i = index"
       [isRemoveButtonHidden]="'true'"
       [viewMode]="viewMode"
       [disabled]="'true'"
