--- a/src/app/forms/load-form/load-form.component.html
+++ b/src/app/forms/load-form/load-form.component.html
@@ -29,51 +29,51 @@
            [optionField]="'name'">
          </bd-typeahead>
        </bd-validator>
-        <customer-form *ngIf='selectedCustomer' [customer]='selectedCustomer' (save)="onCustomerSave($event)" (cancel)="onCustomerEditCancel()" [viewMode]="customerViewMode"> </customer-form>
+        <customer-form *ngIf='load.customer' [customer]='load.customer' (save)="onCustomerSave($event)" (cancel)="onCustomerEditCancel()" [viewMode]="customerViewMode"> </customer-form>
         <bd-form-section>
           <bd-dropdown
-            *ngIf='selectedCustomer'
+            *ngIf='load.customer'
             class="bd-form-control"
             labelText='Address'
             clearLabel='Leave Empty'
             formControlName="addressId"
             defaultTitleText="Select address"
-            [items]="selectedCustomer.addresses"
+            [items]="load.customer.addresses"
             keyField="id"
             valueField="name">
           </bd-dropdown>
         </bd-form-section>
         <bd-form-section>
           <bd-dropdown
-            *ngIf='selectedCustomer'
+            *ngIf='load.customer'
             clearLabel='Leave Empty'
             class="bd-form-control"
             labelText='Billing Address'
             formControlName="billingAddressId"
             defaultTitleText="Select Billing Address"
-            [items]="selectedCustomer.addresses"
+            [items]="load.customer.addresses"
             keyField="id"
             valueField="name">
           </bd-dropdown>
         </bd-form-section>
         <bd-form-section>
           <bd-dropdown
-            *ngIf='selectedCustomer'
+            *ngIf='load.customer'
             clearLabel='Leave Empty'
             class="bd-form-control"
             labelText='Contact'
             defaultTitleText="Select Contact"
             formControlName="contactId"
-            [items]="selectedCustomer.contacts"
+            [items]="load.customer.contacts"
             keyField="id"
             valueField="name">
           </bd-dropdown>
         </bd-form-section>
         <bd-form-section labelText="PICKUPS">
-          <stops-form [formArray]="loadForm.controls.pickups" [items]="load.pickups" [viewMode]="viewMode" [type]="stopTypes.Pickup"></stops-form>
+          <pickups-form [formArray]="loadForm.controls.pickups" [items]="load.pickups" [viewMode]="viewMode" [type]="stopTypes.Pickup"></pickups-form>
         </bd-form-section>
         <bd-form-section labelText="DROPOFFS">
-          <stops-form [formArray]="loadForm.controls.dropoffs" [items]="load.dropoffs" [viewMode]="viewMode" [type]="stopTypes.Dropoff"></stops-form>
+          <dropoffs-form [formArray]="loadForm.controls.dropoffs" [items]="load.dropoffs" [viewMode]="viewMode" [type]="stopTypes.Dropoff"></dropoffs-form>
         </bd-form-section>
         <bd-form-section labelText="REQUIREMENTS">
           <bd-form-switch class="bd-form-control" [labelText]="'Driver'" [enableButtonSwitch]="isEditMode" formControlName="driverRequirment" [items]="driverRequirmentsNames">
