--- a/src/app/forms/pickups-form/pickups-form.component.html
+++ b/src/app/forms/pickups-form/pickups-form.component.html
@@ -1,5 +1,5 @@
 <template let-data ngFor [ngForOf]="renderFormData" let-i="index">
   <bd-remove-button class='bd-form-control' (click)='removeItem(data)' [prefixLabel]="label(i)"> </bd-remove-button>
-  <stop-form [group]="data.group" [stop]="data.item" [viewMode]="viewMode"></stop-form>
+  <pickup-form [group]="data.group" [stop]="data.item" [viewMode]="viewMode"></pickup-form>
 </template>
-<bd-add-button class='bd-form-control' (click)='addNewItem()' suffixLabel="Stop" ></bd-add-button>
+<bd-add-button class='bd-form-control' (click)='addNewItem()' suffixLabel="Pickup" ></bd-add-button>
