--- a/src/app/multi-pane-layout/multi-pane-layout.component.html
+++ b/src/app/multi-pane-layout/multi-pane-layout.component.html
@@ -1,15 +1,15 @@
 <div class="main-area">
-    <div [ngClass]="getClass()" [hidden]="!isVisible(switchStateEnum.FirstPaneVisible)">
+    <div [ngClass]="getClass()" *ngIf="isVisible(switchStateEnum.FirstPaneVisible)">
         <div class="panel">
             <ng-content select="first-pane"></ng-content>
         </div>
     </div>
-    <div [ngClass]="getClass()" [hidden]="!isVisible(switchStateEnum.SecondPaneVisible)">
+    <div [ngClass]="getClass()" *ngIf="isVisible(switchStateEnum.SecondPaneVisible)">
         <div class="panel">
             <ng-content select="second-pane"></ng-content>
         </div>
     </div>
-    <div [ngClass]="getClass()" [hidden]="!isVisible(switchStateEnum.ThirdPaneVisible)">
+    <div [ngClass]="getClass()" *ngIf="isVisible(switchStateEnum.ThirdPaneVisible)">
         <div class="panel">
             <ng-content select="third-pane"></ng-content>
         </div>
