--- a/src/app/forms/load-form/load-form.component.scss
+++ b/src/app/forms/load-form/load-form.component.scss
@@ -1,8 +1,12 @@
 @import '../../../assets/styles/variables';
 @import '../../../assets/styles/form-control';
+@import '../../../assets/styles/styles';
 
 .wrapper {
+  display: flex;
+  height: 100%;
   max-width: 100%;
+  flex-direction: column;
 }
 
 .customer-item-wrapper {
@@ -14,11 +18,10 @@
   align-items: center;
 
   .name-number-wrapper {
-
     .name {
       color: $black;
       font-size: $small-font-size;
-      }
+    }
 
     .number {
       color: $label-default-color;
@@ -30,6 +33,8 @@
 }
 
 .bd-form {
+  overflow-y: auto;
+
   .bd-form-title {
     margin: 30px 0 20px 15px;
     color: $black;
@@ -40,8 +45,12 @@
 }
 
 form-navigation {
-  position: absolute;
-  z-index: 2;
-  top: 0;
   width: 100%;
+  min-height: $form-navigation-height;
+  max-height: $form-navigation-height;
+}
+
+.button-group {
+  min-height: $form-control-height;
+  max-height: $form-control-height;
 }
