--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -1,17 +1,24 @@
 <multi-pane-layout>
     <first-pane>
-      <swui-datatable
-          class='material striped'
-          [rows]='loads'
-          [columns]="columns"
-          [columnMode]="'force'"
-          [headerHeight]="50"
-          [footerHeight]="50"
-          [rowHeight]="'auto'"
-          [selectionType]="'single'"
-          (select)='onLoadSelect($event)'
-          [limit]="10">
-      </swui-datatable>
+      <div class="data-panel">
+        <bd-button
+          class="add-button"
+          [color]="'primary'"
+          [text]="'Add'">
+        </bd-button>
+        <swui-datatable
+            class='material striped'
+            [rows]='loads'
+            [columns]="columns"
+            [columnMode]="'force'"
+            [headerHeight]="50"
+            [footerHeight]="50"
+            [rowHeight]="'auto'"
+            [selectionType]="'single'"
+            (select)='onLoadSelect($event)'
+            [limit]="10">
+        </swui-datatable>
+      </div>
     </first-pane>
 
     <second-pane>
