FSPA-159 fix misspelling

--- a/src/app/forms/load-form/load-form.component.html
+++ b/src/app/forms/load-form/load-form.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <form-navigation [title]="'Loads'" [anchors]="anchors"></form-navigation>
+  <form-navigation [title]="'Load'" [anchors]="anchors"></form-navigation>
   <template #customItemTemplate let-model="item" let-index="index">
       <div class="customer-item-wrapper">
         <div class="name-number-wrapper">
