FSPA-152 make work dependent updates of pickup/dropoff

--- a/src/app/forms/commodities-forms/base-commodity-form/base-commodity-form.component.html
+++ b/src/app/forms/commodities-forms/base-commodity-form/base-commodity-form.component.html
@@ -7,7 +7,7 @@
 </div>
 <commodity
   class='commodity-item'
-  *ngFor="let data of renderFormData; let i = index"
+  *ngFor="let data of renderFormData; let i = index; trackBy:commodityTrackBy"
   [isRemoveButtonHidden]="renderFormData.length === 1"
   [viewMode]="viewMode"
   [commodity]="data.item"
