--- a/src/app/forms/commodities-forms/drop-off-commodity-form/drop-off-commodity-form.component.html
+++ b/src/app/forms/commodities-forms/drop-off-commodity-form/drop-off-commodity-form.component.html
@@ -17,7 +17,7 @@
   <div *ngIf="showPickups">
     <commodity
       class='pickup-commodity-item'
-      *ngFor="let commodity of availablePickups; let i = index"
+      *ngFor="let commodity of availablePickups; let i = index;"
       [isRemoveButtonHidden]="'true'"
       [viewMode]="viewMode"
       [disabled]="'true'"
