FSPA-152 add support for add/remove items

--- a/src/app/forms/commodities-forms/drop-off-commodity-form/drop-off-commodity-form.component.html
+++ b/src/app/forms/commodities-forms/drop-off-commodity-form/drop-off-commodity-form.component.html
@@ -10,6 +10,7 @@
   #commodityForm
   [formArray]="formArray"
   (change)="onChange($event)"
+  (remove)="onRemove($event)"
   [items]="commodities">
 </base-commodity-form>
 <div>
