--- a/src/app/forms/commodities-forms/pick-up-commodity-form/pick-up-commodity-form.component.html
+++ b/src/app/forms/commodities-forms/pick-up-commodity-form/pick-up-commodity-form.component.html
@@ -3,6 +3,7 @@
   #commodityForm
   [formArray]="formArray"
   (change)="onChange($event)"
+  (remove)="onRemove($event)"
   [items]="commodities">
 </base-commodity-form>
 <bd-add-button class="bd-form-control" (mousedown)="onAdd()"></bd-add-button>
