--- a/src/app/forms/contact-form/contact-form.component.scss
+++ b/src/app/forms/contact-form/contact-form.component.scss
@@ -9,7 +9,7 @@
 
   .full-address-properties-wrapper {
 
-    .street-address-title {
+    .name-address-title {
       color: $black;
       font-size: $small-font-size;
       }
