--- a/src/app/forms/load-form/load-form.component.scss
+++ b/src/app/forms/load-form/load-form.component.scss
@@ -9,27 +9,34 @@
   flex-direction: column;
 }
 
-.customer-item-wrapper {
+@mixin dropdown-item-wrapper {
   display: flex;
   height: 75px;
-  padding: 0 17px;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 
-  .name-number-wrapper {
-    .name {
+  .full-properties-wrapper {
+    .name-title {
       color: $black;
       font-size: $small-font-size;
     }
 
-    .number {
+    .properties {
       color: $label-default-color;
       font-size: $tiny-font-size;
       margin-top: 10px;
     }
   }
+}
 
+.dropdown-customer-item-wrapper {
+  @include dropdown-item-wrapper;
+  padding: 0 17px;
+}
+
+.dropdown-address-item-wrapper {
+  @include dropdown-item-wrapper;
 }
 
 .bd-form {
