--- a/src/app/forms/load-form/load-form.component.html
+++ b/src/app/forms/load-form/load-form.component.html
@@ -1,12 +1,12 @@
 <div class="wrapper">
   <form-navigation [title]="'Load'" [anchors]="anchors"></form-navigation>
   <template #customItemTemplate let-model="item" let-index="index">
-      <div class="customer-item-wrapper">
-        <div class="name-number-wrapper">
-          <div class="name">
+      <div class="dropdown-customer-item-wrapper">
+        <div class="full-properties-wrapper">
+          <div class="name-title">
             {{model.name}}
           </div>
-          <div class="number">
+          <div class="properties">
             MC#: {{model.mc}}
           </div>
         </div>
@@ -40,6 +40,7 @@
               clearLabel='Leave Empty'
               formControlName="addressId"
               defaultTitleText="Select address"
+              [dropdownItemTemplate]="addressDropdown"
               [items]="load.customer.addresses"
               keyField="id"
               valueField="name">
@@ -53,6 +54,7 @@
               labelText='Billing Address'
               formControlName="billingAddressId"
               defaultTitleText="Select Billing Address"
+              [dropdownItemTemplate]="addressDropdown"
               [items]="load.customer.addresses"
               keyField="id"
               valueField="name">
@@ -107,4 +109,20 @@
       [text]="'Save'">
     </bd-button>
   </div>
+  <template #addressDropdown let-item="item">
+    <div class="dropdown-address-item-wrapper">
+      <div class="full-properties-wrapper">
+        <div class="name-title">
+          {{item.name}}
+        </div>
+        <div class="properties">
+          {{item.streetAddress}}
+          {{item.secondStreetAddress}}
+          {{item.city}}
+          {{item.state}}
+          {{item.zip}}
+        </div>
+      </div>
+    </div>
+  </template>
 </div>
