--- a/src/app/forms/addresses-form/addresses-form.component.html
+++ b/src/app/forms/addresses-form/addresses-form.component.html
@@ -1,5 +1,5 @@
 <template let-data ngFor [ngForOf]="renderFormData" let-i="index">
-  <bd-remove-button class='bd-form-control' (click)='removeItem(data)' [prefixLabel]="label(i)"> </bd-remove-button>
+  <bd-remove-button class='bd-form-control remove-button' (click)='removeItem(data)' [prefixLabel]="label(i)"> </bd-remove-button>
   <address-form [group]='data.group' [address]='data.item' [viewMode]="viewMode"></address-form>
 </template>
 <bd-add-button class='bd-form-control' (click)='addNewItem()' [suffixLabel]="'Address'" ></bd-add-button>
