Fix adress autocomplete selection

--- a/src/app/forms/commodities-forms/base-commodity-form/base-commodity-form.component.html
+++ b/src/app/forms/commodities-forms/base-commodity-form/base-commodity-form.component.html
@@ -13,6 +13,6 @@
   [group]="data.group"
   (blur)="onBlur($event)"
   (focus)="onFocus($event)"
-  (change)="changeItem($event)"
+  (update)="updateItem($event)"
   (remove)="removeItem(data)">
 </commodity>
