--- a/src/app/forms/commodities-forms/drop-off-commodity-form/drop-off-commodity-form.component.html
+++ b/src/app/forms/commodities-forms/drop-off-commodity-form/drop-off-commodity-form.component.html
@@ -9,7 +9,7 @@
   [viewMode]="viewMode"
   #commodityForm
   [formArray]="formArray"
-  (change)="onChange($event)"
+  (update)="onUpdate($event)"
   (remove)="onRemove($event)"
   [items]="commodities">
 </base-commodity-form>
