--- a/src/app/forms/dropoff-form/dropoff-form.component.html
+++ b/src/app/forms/dropoff-form/dropoff-form.component.html
@@ -8,7 +8,7 @@
     [formArray]="formGroup.controls.commodities"
     [commodities]="stop.commodities"
     [availablePickups]="availablePickups"
-    (change)="onCommodityChange($event)"
+    (update)="onCommodityUpdate($event)"
     (remove)="onCommodityRemove($event)"
     (select)="onCommoditySelect($event)"
     [viewMode]="viewMode">
