--- a/src/app/forms/pickup-form/pickup-form.component.html
+++ b/src/app/forms/pickup-form/pickup-form.component.html
@@ -6,7 +6,7 @@
   </bd-input>
   <pick-up-commodity-form
     [formArray]="formGroup.controls.commodities"
-    (change)="onCommodityChange($event)"
+    (update)="onCommodityUpdate($event)"
     (remove)="onCommodityRemove($event)"
     (add)="onCommodityAdd()"
     [commodities]="stop.commodities"
