--- a/src/app/forms/addresses-form/addresses-form.component.html
+++ b/src/app/forms/addresses-form/addresses-form.component.html
@@ -1,5 +1,5 @@
-<template let-data ngFor [ngForOf]="renderFormData" let-i="index">
+<template let-data ngFor [ngForOf]="renderFormData" let-i="index" [ngForTrackBy]="trackBy">
   <bd-remove-button class='bd-form-control' (click)='removeItem(data)' [prefixLabel]="label(i)"> </bd-remove-button>
-  <address-form [group]='data.group' [address]='data.item' (change)="changeItem($event)" [viewMode]="viewMode"></address-form>
+  <address-form [group]='data.group' [address]='data.item' (update)="updateItem($event)" [viewMode]="viewMode"></address-form>
 </template>
 <bd-add-button class='bd-form-control' (click)='addNewItem()' [suffixLabel]="'Address'" ></bd-add-button>
