--- a/src/app/shared/components/bd-input/bd-input.component.html
+++ b/src/app/shared/components/bd-input/bd-input.component.html
@@ -31,6 +31,7 @@
               placeholder="{{placeholder}}"
               (change)="_handleChange($event)"
               (keydown)="_handleKeyDown($event)"
+              (keyup)="_handleKeyUp($event)"
               (blur)="_handleBlur($event)"
               [attr.name]="name"
               [type]="type"
