--- a/src/app/forms/commodities-forms/drop-off-commodity-form/drop-off-commodity-form.component.html
+++ b/src/app/forms/commodities-forms/drop-off-commodity-form/drop-off-commodity-form.component.html
@@ -22,6 +22,7 @@
 <div>
   <div style="position: relative;">
     <bd-dropdown
+      autoClose='always'
       clearLabel='Leave Empty'
       defaultTitleText=''
       [dropdownItemTemplate]="dropdownItemTemplate"
