--- a/src/app/shared/components/bd-dropdown/bd-dropdown.component.html
+++ b/src/app/shared/components/bd-dropdown/bd-dropdown.component.html
@@ -1,4 +1,4 @@
-<div dropdown class="bd-dropdown-container" name="bd-dropdown-container" (onToggle)="onToggle($event)" [class.bd-focused]="_isOpen">
+<div dropdown [autoClose]="autoClose" class="bd-dropdown-container" name="bd-dropdown-container" (onToggle)="onToggle($event)" [class.bd-focused]="_isOpen">
   <div *ngIf="!toogleTemplate" dropdownToggle
     id="bd-dropdown"
     class="bd-dropdown-wrapper"
@@ -40,7 +40,7 @@
         (click)="_handleDropdownHeaderClick($event)">
           {{clearLabel}}
       </li>
-      <li *ngFor="let item of _items" class='template-item'
+      <li *ngFor="let item of _items" [ngClass]="{'template-item': dropdownItemTemplate}"
           (click)="_handleDropdownItemClick($event, item)">
         <template *ngIf="dropdownItemTemplate"
           [ngTemplateOutlet]="dropdownItemTemplate"
