--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -1,30 +1,32 @@
 <multi-pane-layout>
-    <first-pane>
-      <div class="data-panel">
-        <bd-button
-          class="add-button"
-          [color]="'primary'"
-          [text]="'Add'">
-        </bd-button>
-        <swui-datatable
-            class='material striped'
-            [rows]='loads'
-            [columns]="columns"
-            [columnMode]="'force'"
-            [headerHeight]="50"
-            [footerHeight]="50"
-            [rowHeight]="'auto'"
-            [selectionType]="'single'"
-            (select)='onLoadSelect($event)'
-            [limit]="10">
-        </swui-datatable>
-      </div>
-    </first-pane>
+  <first-pane>
+    <div class="data-panel">
+      <bd-button
+        class="add-button"
+        [color]="'primary'"
+        [text]="'Add'"
+        (click)="onAddLoad()">
+      </bd-button>
+      <swui-datatable
+        #datatable
+        class='material striped'
+        [rows]='loads'
+        [columns]="columns"
+        [columnMode]="'force'"
+        [headerHeight]="50"
+        [footerHeight]="50"
+        [rowHeight]="'auto'"
+        [selectionType]="'single'"
+        (select)='onLoadSelect($event)'
+        [limit]="10">
+      </swui-datatable>
+    </div>
+  </first-pane>
 
-    <second-pane>
-    </second-pane>
+  <second-pane>
+  </second-pane>
 
-    <third-pane>
-      <load-form *ngIf="selectedLoad" [load]="selectedLoad" [viewMode]="loadViewMode"></load-form>
-    </third-pane>
+  <third-pane>
+    <load-form *ngIf="selectedLoad" (save)="onLoadSave($event)" (cancel)="onLoadCancel($event)" [load]="selectedLoad" [viewMode]="loadViewMode"></load-form>
+  </third-pane>
 </multi-pane-layout>
