FSPA-159 add scroll to loads grid

--- a/src/app/loads/loads.component.scss
+++ b/src/app/loads/loads.component.scss
@@ -1,6 +1,9 @@
 @import '../../assets/styles/variables';
 
 .data-panel {
+  height: 100%;
+  overflow-y: auto;
+
   .add-button {
     display: block;
     width: 70px;
