--- a/src/assets/styles/form-control.scss
+++ b/src/assets/styles/form-control.scss
@@ -16,7 +16,7 @@
       }
 
       &.middle-control {
-        box-shadow: inset 0 0 0 1px $white; 
+        box-shadow: inset 0 0 0 1px $white;
       }
 
       &.right-control {
@@ -29,6 +29,13 @@
     .bd-form-control {
       background-color: $white;
     }
+  }
+
+  .bd-form-list-item {
+    &:first-child {
+      margin-top: 0;
+    }
+    margin-top: 20px;
   }
 
   .bd-form-control {
