--- a/src/app/forms/customer-form/customer-form.component.html
+++ b/src/app/forms/customer-form/customer-form.component.html
@@ -1,7 +1,6 @@
 <bd-form-expand (changed)="onExpandChanged($event)" [viewMode]="viewMode">
-	<form [formGroup]="customerForm" novalidate (ngSubmit)="submit(customerForm.value, customerForm.valid)" [class.scrollable]="scrollable">
-		<div [class.scrollable-cantainer]="scrollable">
-			<navigation-anchor id="customer-basic-information"></navigation-anchor>
+	<form [formGroup]="customerForm" novalidate (ngSubmit)="submit(customerForm.value, customerForm.valid)" [class.absolute]="scrollable">
+			<navigation-anchor id="customer-basic-information" [class.not-scrollable]="!scrollable"></navigation-anchor>
 			<bd-form-section [labelText]="'CUSTOMER > BASIC INFORMATION'" [isExpanded]='isExpanded'>
 				<bd-input class="bd-form-control" [labelText]="'Company Name'" formControlName="name" *ngIf="isExpanded">
 				</bd-input>
@@ -24,8 +23,7 @@
 			<bd-form-section [labelText]="'CONTACTS'" [isExpanded]='isExpanded' *ngIf='isExpanded'>
 				<contacts-form [formArray]='customerForm.controls.contacts' [addresses]='customer.addresses' [items]='customer.contacts' [viewMode]="viewMode"></contacts-form>
 			</bd-form-section>
-    </div>
-		<div class="section btn-container" *ngIf="isEditMode">
+		<div class="section btn-container" sticky [top]="false" [class.absolute]="scrollable" *ngIf="isEditMode">
 			<bd-button
 				(click)="onCancel()"
 				[text]="'Cancel'"
