--- a/src/app/forms/load-form/load-form.component.scss
+++ b/src/app/forms/load-form/load-form.component.scss
@@ -3,10 +3,7 @@
 @import '../../../assets/styles/styles';
 
 .wrapper {
-  display: flex;
-  height: 100%;
-  max-width: 100%;
-  flex-direction: column;
+  padding-bottom: calc(#{$form-control-height} + #{$default-margin});
 }
 
 .customer-item-wrapper {
@@ -33,8 +30,6 @@
 }
 
 .bd-form {
-  overflow-y: auto;
-
   .bd-form-title {
     margin: 30px 0 20px 15px;
     color: $black;
@@ -45,12 +40,18 @@
 }
 
 form-navigation {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  display: block;
   width: 100%;
   min-height: $form-navigation-height;
   max-height: $form-navigation-height;
 }
 
 .button-group {
+  position: absolute;
+  z-index: 2;
   min-height: $form-control-height;
   max-height: $form-control-height;
 }
