--- a/src/app/multi-pane-layout/multi-pane-layout.component.scss
+++ b/src/app/multi-pane-layout/multi-pane-layout.component.scss
@@ -5,12 +5,11 @@
 }
 
 .panel {
-  position: relative;
-  overflow: hidden;
   height: calc(100vh - 40px);
   border: 0;
   margin: 0 10px 20px;
   background: transparent;
+  overflow-y: auto;
 }
 
 .col-sm-4,
