--- a/src/app/forms/customer-form/customer-form.component.html
+++ b/src/app/forms/customer-form/customer-form.component.html
@@ -1,38 +1,38 @@
 <bd-form-expand (changed)="onExpandChanged($event)" [viewMode]="viewMode">
-	<form [formGroup]="customerForm" novalidate (ngSubmit)="submit(customerForm.value, customerForm.valid)" [class.absolute]="scrollable">
-			<navigation-anchor id="customer-basic-information" [class.not-scrollable]="!scrollable"></navigation-anchor>
-			<bd-form-section [labelText]="'CUSTOMER > BASIC INFORMATION'" [isExpanded]='isExpanded'>
-				<bd-input class="bd-form-control" [labelText]="'Company Name'" formControlName="name" *ngIf="isExpanded">
+	<form [formGroup]="customerForm" novalidate (ngSubmit)="submit(customerForm.value, customerForm.valid)">
+		<navigation-anchor id="customer-basic-information" [class.not-scrollable]="!scrollable"></navigation-anchor>
+		<bd-form-section [labelText]="'CUSTOMER > BASIC INFORMATION'" [isExpanded]='isExpanded'>
+			<bd-input class="bd-form-control" [labelText]="'Company Name'" formControlName="name" *ngIf="isExpanded">
+			</bd-input>
+			<bd-dropdown class="bd-form-control" [labelText]="'Customer type'" formControlName="type" [items]="customerTypes">
+			</bd-dropdown>
+			<bd-form-switch class="bd-form-control" [labelText]="'Status'" [enableButtonSwitch]="isEditMode" formControlName="status" [items]="customerStatuses">
+			</bd-form-switch>
+			<bd-validator [component]="customerForm.controls.mc" [errorDefs]="{required: 'MC# is required'}">
+				<bd-input class="bd-form-control" [labelText]="'MC #'" formControlName="mc">
 				</bd-input>
-				<bd-dropdown class="bd-form-control" [labelText]="'Customer type'" formControlName="type" [items]="customerTypes">
-				</bd-dropdown>
-				<bd-form-switch class="bd-form-control" [labelText]="'Status'" [enableButtonSwitch]="isEditMode" formControlName="status" [items]="customerStatuses">
-				</bd-form-switch>
-				<bd-validator [component]="customerForm.controls.mc" [errorDefs]="{required: 'MC# is required'}">
-					<bd-input class="bd-form-control" [labelText]="'MC #'" formControlName="mc">
-					</bd-input>
-				</bd-validator>
-				<bd-input class="bd-form-control" [labelText]="'Tax ID (W9)'" formControlName="taxId" *ngIf="isExpanded">
-				</bd-input>
-			</bd-form-section>
-			<navigation-anchor id="customer-addresses"></navigation-anchor>
-			<bd-form-section [labelText]="'CUSTOMER > ADDRESSES'" [isExpanded]='isExpanded' *ngIf='isExpanded' >
-				<addresses-form [formArray]='customerForm.controls.addresses' (update)="onAddressChange($event)" (remove)="onAddressRemove($event)" (add)="onAddressAdd($event)"  [items]='customer.addresses' [viewMode]="viewMode"></addresses-form>
-			</bd-form-section>
-			<navigation-anchor id="customer-contacts"></navigation-anchor>
-			<bd-form-section [labelText]="'CONTACTS'" [isExpanded]='isExpanded' *ngIf='isExpanded'>
-				<contacts-form [formArray]='customerForm.controls.contacts' [addresses]='customer.addresses' [items]='customer.contacts' [viewMode]="viewMode"></contacts-form>
-			</bd-form-section>
-		<div class="section btn-container" sticky [top]="false" [class.absolute]="scrollable" *ngIf="isEditMode">
+			</bd-validator>
+			<bd-input class="bd-form-control" [labelText]="'Tax ID (W9)'" formControlName="taxId" *ngIf="isExpanded">
+			</bd-input>
+		</bd-form-section>
+		<navigation-anchor id="customer-addresses"></navigation-anchor>
+		<bd-form-section [labelText]="'CUSTOMER > ADDRESSES'" [isExpanded]='isExpanded' *ngIf='isExpanded' >
+			<addresses-form [formArray]='customerForm.controls.addresses' (update)="onAddressChange($event)" (remove)="onAddressRemove($event)" (add)="onAddressAdd($event)"  [items]='customer.addresses' [viewMode]="viewMode"></addresses-form>
+		</bd-form-section>
+		<navigation-anchor id="customer-contacts"></navigation-anchor>
+		<bd-form-section [labelText]="'CONTACTS'" [isExpanded]='isExpanded' *ngIf='isExpanded'>
+			<contacts-form [formArray]='customerForm.controls.contacts' [addresses]='customer.addresses' [items]='customer.contacts' [viewMode]="viewMode"></contacts-form>
+		</bd-form-section>
+		<div class="button-group" sticky [top]="false" [scrollable]="scrollable" *ngIf="isEditMode">
 			<bd-button
 				(click)="onCancel()"
 				[text]="'Cancel'"
-				class="bd-button">
+				class="button">
 			</bd-button>
 			<bd-button
 				type="submit"
 				color="primary"
-				class="bd-button"
+				class="button"
 				[text]="submitButtonText">
 			</bd-button>
 		</div>
